# coursework3

./: .flake8  .gitignore  main.py  pyproject.toml  requirements.txt
src/: config.py  database.py  db_manager.py  hh_api.py  vacancies.py
